--- a/src/app.css
+++ b/src/app.css
@@ -2,6 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+	.input {
+		@apply border border-neutral-300 bg-neutral-50 rounded-lg w-full placeholder:text-neutral-600 placeholder:font-semibold px-4 py-2 focus:ring-2 ring-offset-1 ring-brand-color-light outline-none;
+	}
+
+	.box {
+		@apply border border-neutral-300 bg-white rounded-lg;
+	}
+}
+
 :root {
 	scroll-behavior: smooth !important;
 }
