create create post page

--- a/src/app.css
+++ b/src/app.css
@@ -10,6 +10,14 @@
 	.box {
 		@apply border border-neutral-300 bg-white rounded-lg;
 	}
+
+	.primary-btn {
+		@apply border border-brand-color bg-brand-color hover:bg-brand-color-light px-6 py-1.5 font-bold shadow-a text-white rounded-lg flex transition active:ring-2 ring-offset-1 ring-brand-color-light;
+	}
+
+	.secondary-btn {
+		@apply border border-brand-color px-6 py-1.5 font-bold shadow-a text-brand-color rounded-lg flex transition active:ring-2 ring-offset-1 ring-brand-color-light;
+	}
 }
 
 :root {
