--- a/src/app.css
+++ b/src/app.css
@@ -4,7 +4,7 @@
 
 @layer components {
 	.input {
-		@apply border border-neutral-300 bg-neutral-50 rounded-lg w-full placeholder:text-neutral-600 placeholder:font-semibold px-4 py-2 focus:ring-2 ring-offset-1 ring-brand-color-light outline-none;
+		@apply border border-neutral-300 bg-neutral-50 rounded-lg w-full placeholder:text-neutral-600 placeholder:font-semibold px-4 py-2 focus:ring-2 ring-offset-1 ring-brand-color-light outline-none transition;
 	}
 
 	.box {
