--- a/src/app.css
+++ b/src/app.css
@@ -39,6 +39,14 @@ body {
 	font-size: inherit;
 	font-family: inherit;
 	color: inherit;
+
+	-webkit-tap-highlight-color: transparent;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 
 .no-scroll::-webkit-scrollbar {
