--- a/src/app.css
+++ b/src/app.css
@@ -28,7 +28,7 @@ html,
 body {
 	padding: 0;
 	margin: 0;
-	font-family: 'Nunito Sans', system-ui, sans-serif;
+	font-family: 'Raleway', system-ui, sans-serif;
 	scroll-behavior: smooth !important;
 }
 
